src/test/error/var.lns
{
   let val:Map<int> = {};  // error
}


pub let var = 1;
{
   pub let var2 = 1;  // error
}
pub let var3 = 1;

provide var;

